@@ -1,5 +1,6 @@
 V.Next
 ----------
+- [MINOR] Add telemetry relay client (#1757)
 - [MAJOR] Adding YubiKit SDK, which requires Java Version 8 and will thus bump up Java version overall to 8; added keyboard flag to android:configChanges for all activities that could interact with a YubiKey. (#1729)
 - [MINOR] Support WordApp local apk install in UI automation flows (#1732)
 - [PATCH] Add exception handling in Content Provider strategy, for broker communication (#1722)
